--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background: url('bg.jpg') no-repeat center center fixed;
+  background: url('bg.jpg') no-repeat left center fixed;
   background-size: cover;
   text-align: center;
   font-family: 'Comic Sans MS', sans-serif;
