--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
+<title>Magister Mugit</title>
 <style>
 body {
   background: url('bg.jpg') no-repeat left center fixed;
